[package]
name = "aoc_2022_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
petgraph = "0.6.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

[profile.release]
lto = true
codegen-units = 1